# AnkiHelper

./: .gitignore  LICENSE  README.md  makecards.py  pyproject.toml
ankihelper/: __init__.py  __main__.py  deck.py
cards/: Calculus 2.apkg  Clac2cards_General_9-23.apkg  CloudComputingFlashcards.apkg  Exam2.apkg
kunyi/: __init__.py  __main__.py  card_types.py  deck.py  parsers.py
