[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ankihelper"
version = "0.1.0"
description = "Generate Anki .apkg decks from JSON (MCQ) or TSV (basic) card data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["genanki>=0.13"]

[project.urls]
Homepage = "https://github.com/LingT03/AnkiHelper"
"Bug Tracker" = "https://github.com/LingT03/AnkiHelper/issues"
Changelog = "https://github.com/LingT03/AnkiHelper/releases"

[project.scripts]
ankihelper = "ankihelper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ankihelper"]
