[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kunyi"
version = "0.1.0"
description = "Generate Anki .apkg decks from JSON (MCQ) or TSV (basic) card data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["genanki>=0.13"]

[project.urls]
Homepage = "https://github.com/LingT03/Kunyi"
"Bug Tracker" = "https://github.com/LingT03/Kunyi/issues"
Changelog = "https://github.com/LingT03/Kunyi/releases"

[project.scripts]
kunyi = "kunyi.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["kunyi"]
